Details
-
Bug
-
Status: Resolved
-
Trivial
-
Resolution: Fixed
-
Impala 2.7.0
Description
Start impala with option -websever_interface=127.0.0.1 failed.
log displayed on terminal:
bash-4.1$ ./bin/start-impala-cluster.py -s 1 --impalad_args "-webserver_interface=127.0.0.1" Starting State Store logging to /home/impala/incubator-impala/logs/cluster/statestored.INFO Starting Catalog Service logging to /home/impala/incubator-impala/logs/cluster/catalogd.INFO Starting Impala Daemon logging to /home/impala/incubator-impala/logs/cluster/impalad.INFO MainThread: Found 1 impalad/1 statestored/1 catalogd process(es) MainThread: Getting num_known_live_backends from nobida141:25000 MainThread: Debug webpage not yet available. ... MainThread: Debug webpage not yet available. MainThread: Debug webpage did not become available in expected time. MainThread: Waiting for num_known_live_backends=1. Current value: None Error starting cluster: num_known_live_backends did not reach expected value in time